--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "devDependencies": {
     "@antfu/eslint-config": "^2.8.1",
     "@ffflorian/jszip-cli": "^3.6.2",
+    "@headlessui/vue": "^1.7.21",
     "@iconify/json": "^2.2.191",
     "@playwright/test": "^1.42.1",
     "@types/fs-extra": "^11.0.4",
@@ -58,6 +59,7 @@
     "simple-git-hooks": "^2.10.0",
     "typescript": "^5.4.2",
     "unocss": "^0.58.5",
+    "unocss-preset-daisy": "^7.0.0",
     "unplugin-auto-import": "^0.17.5",
     "unplugin-icons": "^0.18.5",
     "unplugin-vue-components": "^0.26.0",
