--- a/package.json
+++ b/package.json
@@ -40,14 +40,15 @@
     "@types/node": "^20.11.26",
     "@types/webextension-polyfill": "^0.10.7",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
-    "@unocss/reset": "^0.58.5",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vue/compiler-sfc": "^3.4.21",
     "@vue/test-utils": "^2.4.4",
     "@vueuse/core": "^10.9.0",
+    "autoprefixer": "^10.4.19",
     "chokidar": "^3.6.0",
     "cross-env": "^7.0.3",
     "crx": "^5.0.1",
+    "daisyui": "^4.10.2",
     "eslint": "^8.57.0",
     "esno": "^4.7.0",
     "fs-extra": "^11.2.0",
@@ -55,11 +56,11 @@
     "kolorist": "^1.8.0",
     "lint-staged": "^15.2.2",
     "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.38",
     "rimraf": "^5.0.5",
     "simple-git-hooks": "^2.10.0",
+    "tailwindcss": "^3.4.3",
     "typescript": "^5.4.2",
-    "unocss": "^0.58.5",
-    "unocss-preset-daisy": "^7.0.0",
     "unplugin-auto-import": "^0.17.5",
     "unplugin-icons": "^0.18.5",
     "unplugin-vue-components": "^0.26.0",
