--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
   "devDependencies": {
     "@antfu/eslint-config": "^2.8.1",
     "@ffflorian/jszip-cli": "^3.6.2",
-    "@headlessui/vue": "^1.7.21",
     "@iconify/json": "^2.2.191",
     "@playwright/test": "^1.42.1",
     "@types/fs-extra": "^11.0.4",
@@ -57,6 +56,7 @@
     "lint-staged": "^15.2.2",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.38",
+    "radix-vue": "^1.7.3",
     "rimraf": "^5.0.5",
     "simple-git-hooks": "^2.10.0",
     "tailwindcss": "^3.4.3",
