--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@ffflorian/jszip-cli": "^3.6.2",
     "@iconify/json": "^2.2.191",
     "@playwright/test": "^1.42.1",
+    "@radix-ui/colors": "^3.0.0",
     "@types/fs-extra": "^11.0.4",
     "@types/node": "^20.11.26",
     "@types/webextension-polyfill": "^0.10.7",
