--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "chokidar": "^3.6.0",
     "cross-env": "^7.0.3",
     "crx": "^5.0.1",
-    "daisyui": "^4.10.2",
+    "daisyui": "^4.10.5",
+    "dayjs": "^1.11.11",
     "eslint": "^8.57.0",
     "esno": "^4.7.0",
     "fs-extra": "^11.2.0",
